# ddDT-GFM

./: Dockerfile  README.md  environment.yml  pyproject.toml  requirements-lock-cpu.txt  requirements-lock-cu121.txt
.github/workflows/: publish.yml  test.yml
data/: 111417_width_measure_interval_lpbf.parquet
dddt_gfm/: __init__.py
dddt_gfm/dataloaders/: dataloader_DIW.py
dddt_gfm/exemplar_DIW/training/: train.py
dddt_gfm/exemplar_PV/training/: train.py
dddt_gfm/models/: stGAE.py
dddt_gfm/tests/: test_util.py
dddt_gfm/util/: callbacks.py
docs/: api.rst  conf.py  index.rst  installation.rst  make.bat
graphfoundationmodels/exemplar_LPBF/training/: train.py
notebooks/: DIW_demo.ipynb  LPBF_demo.ipynb  PV_demo.ipynb
