[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ddDT-GFM"
description = "Generalized graph foundation models as versatile data-driven digital twins for complex technological systems."
readme = "README.md"
license = { file = "LICENSE" }
# All authors are listed name-only so they render uniformly in PyPI's
# "Author" field. Contact emails are kept under maintainers (setuptools
# routes any author WITH an email into the separate Author-email field,
# which PyPI displays inconsistently — hence names-only here).
authors = [
    { name = "Benjamin G. Pierce" },
    { name = "Raymond J. Wieser" },
    { name = "Weiqi Yue" },
    { name = "Yangxin Fan" },
    { name = "Hein Htet Aung" },
    { name = "Thomas G. Ciardi" },
    { name = "Yinghui Wu" },
    { name = "Pawan K. Tripathi" },
    { name = "Roger H. French" },
]
maintainers = [
    { name = "Pawan K. Tripathi", email = "pawan.tripathi@case.edu" },
    { name = "Roger H. French", email = "rxf131@case.edu" },
]
# Validated on Python 3.10; torch 2.1/2.2 have no cp312 wheels, so cap <3.12.
requires-python = ">=3.9,<3.12"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Loose but *bounded* ranges: pip resolves the right wheel for the platform
# (NVIDIA/ROCm/Intel/CPU) — torch is intentionally NOT pinned to a CUDA build.
# Caps keep the resolver inside the validated island (torch 2.1.2 +
# torch-geometric 2.7 + tsl 0.9.5, tested on Python 3.10 / CUDA 12.1).
#
# Two hard-won requirements captured here:
#   * numpy<2   — torch 2.1/2.2 are not ABI-compatible with numpy 2.x.
#   * setuptools<81 — pytorch-lightning 2.2.x imports `pkg_resources`, which
#     setuptools 81 removed; fresh envs no longer ship setuptools at all.
#
# NOT declared here (they have no PyPI/macOS wheels and would source-build):
# `torch-sparse` and `torch-scatter`. tsl 0.9.5 REQUIRES torch-sparse at import,
# so install them from the CUDA/torch-matched PyG index BEFORE this package, e.g.
#   pip install torch-scatter torch-sparse -f https://data.pyg.org/whl/torch-2.1.0+cu121.html
# The demo notebooks, requirements-lock-*.txt, and the Dockerfile all do this.
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.11",
    "tqdm>=4.6",
    "requests>=2.28",
    "setuptools<81",
    "torch>=2.1,<2.3",
    "torchvision>=0.16,<0.18",
    "torch-geometric>=2.5,<2.8",
    "torch-spatiotemporal>=0.9,<0.10",  # provides the `tsl` import
    "pytorch-lightning>=2.1,<2.3",
]

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "sphinx>=7",
    "furo",
    "sphinx-autodoc-typehints",
]

[project.urls]
Homepage = "https://github.com/cwru-sdle/ddDT-GFM"
Repository = "https://github.com/cwru-sdle/ddDT-GFM"
Documentation = "https://dddt-gfm.readthedocs.io"

[tool.setuptools.packages.find]
include = ["dddt_gfm*"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
